# tuttut

./: .gitignore  LICENSE  README.md  main.py  midi_tabs.py  midi_tabs_cli.py  pyproject.toml  requirements.txt  tab.py  theory.py  utils.py
GUI/: config.py  dialogs.py  generate.py  gui.py  gui_utils.py
GUI/web/: index.html  presets.json
GUI/web/css/: general.css  main.css  modal.css
GUI/web/js/: cleaning.js  configuration.js  constants.js  initialise.js  interface.js  messages.js  modal.js  processing.js  staticEvents.js  utils.js
app/: arrangement.py  fretboard.py  graph_utils.py  midi_utils.py  tab.py  theory.py  utils.py  validation.py
app/tests/: test_graph_utils.py  test_midi_utils.py
midis/: cmajor.mid  twinkle.mid  twinkle_melo.mid
tabs/: Cmajor.txt  Sandstorm.txt  twinkle_melo.txt
tests/: test_graph_utils.py  test_integration.py  test_midi_utils.py  test_tab.py
tuttut/: arrangement.py  fretboard.py  graph_utils.py  midi_tabs_cli.py  midi_tabs_gui.py  midi_utils.py  tab.py  theory.py  validation.py
tuttut/GUI/: dialogs.py  generate.py  gui.py  gui_utils.py
tuttut/GUI/web/: index.html
tuttut/GUI/web/css/: general.css  main.css
tuttut/GUI/web/js/: cleaning.js  configuration.js  constants.js  interface.js  messages.js  modal.js  staticEvents.js  utils.js
tuttut/logic/: arrangement.py  difficulty.py  fretboard.py  graph_utils.py  midi_utils.py  tab.py  theory.py  validation.py
tuttut/tests/: test_midi_utils.py
